Add some attributes to replay format
